app/assets/stylesheets/modules/gallery-view.css.scss
/* Note Blacklight-Gallery plugin is being used but styles and partials are
   being overridden.
*/

.gallery {
  .item-thumb {
    height: 210px;
    width: $gallery-document-width - 2;
    display: table-cell;
    text-align: center;
    vertical-align: bottom;
  }

  .callnumber-bar {
    background-color: $sul-gallery-callnumber-bar-bg;
    color: $sul-gallery-callnumber-bar-color;
    font-weight: 300;
    font-size: .9em;
    text-align: center;
    padding: 3px 0;
    overflow: hidden;
    white-space: nowrap;
    width: $gallery-document-width - 2;
  }

  .caption {
    padding-left: 0px;
    padding-right: 0px;
  }

  .caption h5 {
    overflow:hidden;
    max-height: 4.4em;
  }

  .gallery-document {
    @include document-borders;
    position: relative;
    margin: 0px 0px 15px 15px;
    float: left;
    display: inline;
    background-color: $white;
    width: $gallery-document-width;
    height: $gallery-document-height;

    h3.index_title {
      font-size: 1.1em;
      line-height: 1.5em;
      margin: .5em;
      text-align: center;
    }

    .btn-preview {
      &:after {
        font-family: FontAwesome;
        content: " \f0da";
      }
      &.preview-open:after {
        font-family: FontAwesome;
        content: " \f0d7";
      }
    }
  }

  .document-counter {
    display: none;
  }

  div.gallery-buttons {
    height: 30px;
    width: 100%;
    position: absolute;
    bottom: 6px;
    display: inline-block;

    .preview-button {
      position: absolute;
      bottom: 0px;
      margin-left: 8px;
      margin-bottom: 3px;
    }

    form {
      position: absolute;
      left: 120px;
      font-size: .9em;
    }
  }
  .stacks-image {
    max-width: 183px;
    max-height: 200px;
  }
}

span.fake-cover {
  width: 130px;
  height: 195px;
  text-align: center;
  position: relative;
  margin: 0 auto;
  display: block;
  background: $sul-gallery-fakecover-bg;
  border: 1px solid $sul-gallery-fakecover-border;
}

div.fake-cover-text-wrapper {
  width: 130px;
  height: 195px;
  display: table-cell;
  vertical-align: middle;
}

div.fake-cover-text {
  padding: 4px;
  max-height: 7.3em;
  overflow: hidden;
}

.view-icon-slideshow {
  &:before { content: "\e158"; }
}

